[package]
name = "systemrdl-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "systemrdl_rust"
crate-type = ["cdylib"]

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py312"] }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
